# py-cokiecutter

./: .gitignore  README.rst  TODO  cookiecutter.json
{{cookiecutter.project_name}}/: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .pre_commit_tool_runner  .travis.yml  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.rst  noxfile.py  prep_release.py  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/.github/: CODEOWNERS  ISSUE_TEMPLATE.md  pull_request_template.md
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: .bug-report.md  .documentation.md  .feature-request.md  .something-else.md
{{cookiecutter.project_name}}/.github/workflows/: code-quality.yml  codeql-analysis.yml  dependency-safety.yml  publish.yml  test-code-skip.yml  test-code.yml  test-docs.yml  update-authors.yml
{{cookiecutter.project_name}}/docs/source/: _badges.rst  api.rst  badges.rst  changelog.rst  conf.py  index.rst  installation.rst  license.rst  usage.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_slug}}.py
