[metadata]
name = {{ cookiecutter.project_name }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/{{cookiecutter.github_username}}/{{ cookiecutter.project_lower_case}}
author = {{ cookiecutter.full_name }}
license = {{ cookiecutter.license }}
license_file = LICENSE.rst
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
{%- set license_classifiers = {
    'GPL-3.0': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'LGPL-3.0': 'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD3': 'License :: OSI Approved :: BSD License',
} %}
{%- if cookiecutter.license in license_classifiers %}
    {{ license_classifiers[cookiecutter.license] }}
{%- endif %}
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
keywords =
maintainer = {{ cookiecutter.full_name }}
maintainer-email = {{ cookiecutter.email }}
project_urls =
    Source=https://github.com/{{cookiecutter.github_username}}/{{ cookiecutter.project_lower_case}}
    Documentation=https://{{ cookiecutter.project_lower_case }}.readthedocs.io/
    Tracker=https://github.com/{{cookiecutter.github_username}}/{{ cookiecutter.project_lower_case}}/issues


[options]
packages = find:
install_requires ={% if cookiecutter.command_line_interface|lower == 'click' -%}
    {{"\n    "}}click>=7.0,<8{% endif %}
python_requires = ~=3.6
include_package_data = True
package_dir =
    =src


[options.entry_points]
console_scripts =
{% if cookiecutter.command_line_interface|lower == 'click' -%}
    {{"    "}}{{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:main
{% endif %}
[options.extras_require]
docs =
    sphinx>=2.0,<3
    sphinx-rtd-theme>=0.4
    sphinx-autodoc-typehints>=1.10,<2{% if cookiecutter.command_line_interface|lower == 'click' -%}
    {{"\n    "}}sphinx-click>=2.3,<3{% endif %}
testing =
    pytest>=5.0,<6
    pytest-cov>=2.5,<3
    pytest-xdist>=1.31,<2

;[options.package_data]
;"" = dir/*

[options.packages.find]
where = src

[bdist_wheel]
universal = 0
